# cjsh-configure

./: .gitignore  CMakeLists.txt
include/: cjsh_filesystem.h  tui_configurator.h
src/: cjsh_filesystem.cpp  main.cpp  tui_configurator.cpp
